:sparkles: :bug: (app/blocks/select, app/blocks/cities) Fix container's arrow' vertical alignment

--- a/app/blocks/select/select.scss
+++ b/app/blocks/select/select.scss
@@ -2,6 +2,8 @@
 	display: flex;
 
 	&--cities {
+		line-height: 1.4;
+
 		appearance: none;
 		background-color: transparent;
 		border: none;
